--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-nav{
-display:flex
+ * {
+    margin: 0;
+    padding: 0;
 }
 
-nav__botao,
-.nav__logo {
-width: 35px;
-height: 35px;
-background-color: black;
+nav { 
+    display: flex;
+    
 }
+ 
